# pico-i2s-pio

./: CMakeLists.txt  README.md  i2s.c  i2s.h  i2s.pio  i2s.pio.h
arduino/PicoI2SPIO/: README.md  keywords.txt  library.properties
arduino/PicoI2SPIO/examples/AudioCallback/: AudioCallback.ino
arduino/PicoI2SPIO/examples/HighQualityAudio/: HighQualityAudio.ino
arduino/PicoI2SPIO/examples/PT8211DAC/: PT8211DAC.ino
arduino/PicoI2SPIO/examples/SimpleTone/: SimpleTone.ino
arduino/PicoI2SPIO/examples/StereoTest/: StereoTest.ino
arduino/PicoI2SPIO/examples/Synthesizer/: Synthesizer.ino
arduino/PicoI2SPIO/examples/VolumeControl/: VolumeControl.ino
arduino/PicoI2SPIO/src/: PicoI2SPIO.cpp  PicoI2SPIO.h  i2s.c
examples/: basic_i2s_output.c  dual_mono_pt8211.c  low_jitter_mode.c  multi_sample_rate.c  volume_control.c
